testData/inspections/UnresolvedReferenceInspection/UnresolvableFunction.R
<error descr="Unresolved reference">lalelu</error>("foo", "bar")